Fix: Add missing margin for container

--- a/src/css/header.module.css
+++ b/src/css/header.module.css
@@ -6,6 +6,7 @@
   justify-content: flex-start;
   align-content: center;
   max-width: 960px;
+  margin: 0 auto;
 }
 
 .container:after {
